# reazonspeech-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: downloader.rs  lib.rs  main.rs
